k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel-app
  labels:
    app: laravel
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    name: http
    protocol: TCP
  - port: 22
    targetPort: 22
    nodePort: 30022
    name: ssh
    protocol: TCP
  - port: 3306
    targetPort: 3306
    nodePort: 30306
    name: mysql
    protocol: TCP
  selector:
    app: laravel
